# tree-sitter-ziggy-schema

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ziggy_schema.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ziggy_schema/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZiggySchema/: ziggy_schema.h
bindings/swift/TreeSitterZiggySchemaTests/: TreeSitterZiggySchemaTests.swift
src/: grammar.json  node-types.json  parser.c
